Refactor: class to count grouped results from database